@@ -231,7 +231,7 @@ implements CertAttrSet<String> {
      */
     public Object get(String name) throws IOException {
         if (name.equalsIgnoreCase(REQUIRE)) {
-            return new Integer(require);
+            return Integer.valueOf(require);
         } else if (name.equalsIgnoreCase(INHIBIT)) {
             return new Integer(inhibit);
         } else {
